Solved problem from merge